<resources>
    <string name="app_name">InventoryApp</string>
    <string name="empty_list">No data to show Insert a new Product to show  :) </string>
    <string name="product_name">Product Name </string>
    <string name="product_quantity">Product Quantity</string>
    <string name="product_price">Product Price</string>
    <string name="supplier_name">Supplier Name</string>
    <string name="supplier_phone">Supplier Phone</string>
    <string name="supplier_email">Supplier Email</string>
    <string name="delete_product">Delete This Product</string>
    <string name="connect_supplier_email">Send supplier email </string>
    <string name="connect_supplier_phone">Call Supplier</string>
    <string name="validation_input_error">Please fill all require data and be sure that quantity greater than ZERO</string>
    <string name="add_product">Add Product</string>
    <string name="edit_product">Edit Product</string>
    <string name="update_product">Update Product</string>
    <string name="confirm_deletion">Are you sure you want to delete this product</string>
    <string name="yes">Yes</string>
    <string name="no">NO</string>
    <string name="quantity">Quantity : </string>
    <string name="price">Price : </string>
</resources>
